--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -1,19 +1,56 @@
-= form_for @customer do |f|
+.wizard
+  New Customer [open] New Customer [close]
   -if @customer.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@customer.errors.count, "error")} prohibited this customer from being saved:"
+      %h2= "#{pluralize(@customer.errors.count, "error")} prohibited this contact from being saved:"
       %ul
         - @customer.errors.full_messages.each do |msg|
           %li= msg
-
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :shortname
-    = f.text_field :shortname
-  .field
-    = f.label :website
-    = f.text_field :website
-  .actions
+  %hr/
+  = form_for @customer do |f|
+    %fieldset
+      %legend Customer Name
+      %dt= f.label :shortname
+      %dd= f.text_field :shortname
+      %dt= f.label :name
+      %dd= f.text_field :name
+      %dt= f.label :website
+      %dd= f.text_field :website
+    
+    -f.fields_for :locations do |l|
+      %fieldset
+        %legend Main Location
+        %dl
+          %dt= l.label :name
+          %dd= l.text_field :name
+          %dt= l.label :street
+          %dd= l.text_field :street
+          %dt= l.label :zip
+          %dd= l.text_field :zip
+          %dd= l.text_field :city
+          %dt= l.label :fon
+          %dd= l.text_field :fon
+          %dt= l.label :fax
+          %dd= l.text_field :fax
+      -l.fields_for :contacts do |c|
+        %fieldset
+          %legend Main Contact
+          %dl
+            %dt= c.label :salutation
+            %dd= c.text_field :salutation
+            %dd= c.text_field :title
+            %dt= c.label :firstname
+            %dd= c.text_field :firstname
+            %dt= c.label :lastname
+            %dd= c.text_field :lastname
+            %dt= c.label :department
+            %dd= c.text_field :department
+            %dt= c.label :email
+            %dd= c.text_field :email
+            %dt= c.label :fon
+            %dd= c.text_field :fon
+            %dt= c.label :fax
+            %dd= c.text_field :fax
+            %dt= c.label :mobile
+            %dd= c.text_field :mobile
     = f.submit 'Save'
