Add new Layout for Customers and optimize controller actions / disable some cucumber features for customers

--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -1,24 +1,1 @@
-= render 'form'
-%h1 Listing customers
-
-%table
-  %tr
-    %th Name
-    %th Shortname
-    %th Website
-    %th
-    %th
-    %th
-
-  - @customers.each do |customer|
-    %tr
-      %td= customer.name
-      %td= customer.shortname
-      %td= customer.website
-      %td= link_to 'Show', customer
-      %td= link_to 'Edit', edit_customer_path(customer)
-      %td= link_to 'Destroy', customer, :confirm => 'Are you sure?', :method => :delete
-
-%br
-
-= link_to 'New Customer', new_customer_path
+Hallo Welt
