--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -7,7 +7,7 @@
         - @customer.errors.full_messages.each do |msg|
           %li= msg
   %hr/
-  = form_for @customer do |f|
+  = form_for @form_customer do |f|
     %fieldset
       %legend Customer Name
       %dt= f.label :shortname
@@ -16,7 +16,6 @@
       %dd= f.text_field :name
       %dt= f.label :website
       %dd= f.text_field :website
-    
     -f.fields_for :locations do |l|
       %fieldset
         %legend Main Location
