--- a/public/stylesheets/_basic.less
+++ b/public/stylesheets/_basic.less
@@ -13,8 +13,8 @@
   padding-right: @paddingRight * 10px;
 }
 .clear {
-clear: both;
-display: block;
+clear: both !important;
+display: block !important;
 overflow: hidden;
 visibility: hidden;
 width: 0;
