--- a/app/views/layouts/customers.html.haml
+++ b/app/views/layouts/customers.html.haml
@@ -3,12 +3,13 @@
   %head
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
     %title Nancy
+    %link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
     = javascript_include_tag :defaults
-    = csrf_meta_tag
     = stylesheet_link_tag :all
+    = csrf_meta_tag
   %body
-    - flash.each do |key, value|
-      %div{:class => key}= value
-    = render 'form'
-    = yield
-    = render 'list'
+    .container
+      - flash.each do |key, value|
+        %div{:class => key}= value
+      = render 'customers/form'
+      = render 'customers/list'
