--- a/app/views/customers/details/_contacts.html.haml
+++ b/app/views/customers/details/_contacts.html.haml
@@ -15,15 +15,15 @@
         %li= contact.department
         %li.fon
           -if !contact.fon.empty?
-            %span= "Fon #{contact.fon}"
+            %span= "Fon: #{contact.fon}"
           -if !contact.fax.empty?
-            %span= "Fax #{contact.fax}"
+            %span= "Fax: #{contact.fax}"
           -if !contact.mobile.empty?
-            %span= "Mobile #{contact.mobile}"
+            %span= "Mobile: #{contact.mobile}"
         %li.actions
           = mail_to contact.email, 'M'
           = link_to 'E', edit_customer_location_contact_path(@customer, @location, contact)
-          = link_to 'D', contact, :confirm => 'Are you sure?', :method => :delete  
+          = link_to 'D', customer_location_contact_path(@customer, @location, contact), :confirm => 'Are you sure?', :method => :delete  
   = form_for([@customer, @location, @contact_build], :html => {:style => "display: #{@displayContactForm || 'none'};"}) do |f|
     %fieldset
       %legend Create Contact
@@ -49,4 +49,4 @@
         %dt= f.label :mobile
         %dd= f.text_field :mobile
     = f.hidden_field :location_id, :value => @location.id
-    = f.submit 'Save'
+    = f.submit 'Save Contact'
