--- a/app/views/customers/_list.html.haml
+++ b/app/views/customers/_list.html.haml
@@ -1,7 +1,13 @@
 .toolbar
   %ul
-    %li Name
-    %li Shortname
+    %li
+      Name 
+      = link_to "U", customers_path(:order => "name asc")
+      = link_to "D", customers_path(:order => "name desc")
+    %li
+      Shortname
+      = link_to "U", customers_path(:order => "shortname asc")
+      = link_to "D", customers_path(:order => "shortname desc")
     %li Locations
 -@customers.each do |customer|
   .customer
@@ -11,9 +17,9 @@
         %li= customer.shortname
         %li= customer.locations.count
         %li.actions
-          = link_to 'C', customers_path
-          = link_to 'E', edit_customer_path(customer)
-          = link_to 'D', customer, :confirm => 'Are you sure?', :method => :delete
+          = link_to 'C', customers_path(:order => params[:order])
+          = link_to 'E', edit_customer_path(customer, :order => params[:order])
+          = link_to 'D', customer_path(customer, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete
         .clear
       .nestedRessources
         = render :partial => 'customers/details/locations'
@@ -25,8 +31,8 @@
         %li= customer.shortname
         %li= customer.locations.count
         %li.actions
-          = link_to 'O', customer
-          = link_to 'E', edit_customer_path(customer)
-          = link_to 'D', customer, :confirm => 'Are you sure?', :method => :delete
+          = link_to 'O', customer_path(customer, :order => params[:order])
+          = link_to 'E', edit_customer_path(customer, :order => params[:order])
+          = link_to 'D', customer_path(customer, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete
         .clear
       .clear
