--- a/app/views/customers/details/_contacts.html.haml
+++ b/app/views/customers/details/_contacts.html.haml
@@ -2,12 +2,12 @@
   .details{:style => "display: #{@displayContactsRecord || 'block'};"}
     %h2 Contacts
     %span.actions
-      = link_to 'N', new_customer_location_contact_path(@customer, @location, :order => params[:order])
+      = link_to image_tag("/images/icons/contact-create.gif"), new_customer_location_contact_path(@customer, @location, :order => params[:order])
     %hr.clear/
     %ul.toolbar
-      %li Name
+      %li.name Name
       %li Department
-      %li Contact
+      %li.fon Contact
       .clear
     - @contacts.each do |contact|
       %ul.record
@@ -21,13 +21,13 @@
           -if !contact.mobile.empty?
             %span= "Mobile: #{contact.mobile}"
         %li.actions
-          = mail_to contact.email, 'M'
-          = link_to 'E', edit_customer_location_contact_path(@customer, @location, contact, :order => params[:order])
-          = link_to 'D', customer_location_contact_path(@customer, @location, contact, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete  
+          = mail_to contact.email, image_tag("/images/icons/mail.gif")
+          = link_to image_tag("/images/icons/edit.gif"), edit_customer_location_contact_path(@customer, @location, contact, :order => params[:order])
+          = link_to image_tag("/images/icons/delete.gif"), customer_location_contact_path(@customer, @location, contact, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete  
   = form_for([@customer, @location, @contact_build], :html => {:style => "display: #{@displayContactForm || 'none'};"}) do |f|
     %fieldset
       %legend Create Contact
-      = link_to 'C', customer_location_path(@customer, @location, :order => params[:order])
+      = link_to image_tag("/images/icons/container-close.gif"), customer_location_path(@customer, @location, :order => params[:order])
       %hr.clear/
       %dl
         %dt= f.label :salutation
