Add filter [all|active|closed] function to projects

--- a/public/stylesheets/nancy.less
+++ b/public/stylesheets/nancy.less
@@ -188,6 +188,16 @@ div#projectForm {
 }
 
 
+div.filter {
+	margin-left: 20px;
+	li {
+		.grid(13,0,1);
+		.roundedTop;
+		background-color: @blueLight;
+		line-height: 30px;
+		text-align: center;
+	}
+}
 
 div.project {
 	color: @blueDark;
