--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -1,21 +1,27 @@
+.filter
+	%ul
+		%li.active= link_to "All Projects", projects_path(:order => params[:order])
+		%li.active= link_to "Active Projects", projects_path(:order => params[:order], :closed => 0)
+		%li.active= link_to "Closed Projects", projects_path(:order => params[:order], :closed => 1)
+		.clear
 .toolbar
 	%ul
 		%li.nr
 			Nr. 
-			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "id asc")
-			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "id desc")
+			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "id asc"), :closed => params[:closed]
+			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "id desc", :closed => params[:closed])
 		%li
 			Title
-			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "title asc")
-			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "title desc")
+			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "title asc", :closed => params[:closed])
+			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "title desc", :closed => params[:closed])
 		%li
 			Customer
-			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "customer asc")
-			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "customer desc")
+			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "customer asc", :closed => params[:closed])
+			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "customer desc", :closed => params[:closed])
 		%li.date
 			Created at
-			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "created_at asc")
-			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "created_at desc")
+			= link_to image_tag("/images/icons/order-up.gif"), projects_path(:order => "created_at asc", :closed => params[:closed])
+			= link_to image_tag("/images/icons/order-down.gif"), projects_path(:order => "created_at desc", :closed => params[:closed])
 -@projects.each do |project|
 	.project
 		- if project.id == @project.id && "#{params[:controller]}/#{params[:action]}" != 'projects/edit' 
@@ -25,18 +31,18 @@
 				%li= project.customer.name
 				%li.date= project.created_at.strftime("%Y-%m-%d")
 				%li.actions
-					= link_to image_tag("/images/icons/container-close.gif"), projects_path(:order => params[:order])
-					= link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order])
-					= link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete
+					= link_to image_tag("/images/icons/container-close.gif"), projects_path(:order => params[:order], :closed => params[:closed])
+					= link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed])
+					= link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete
 				.clear
 			.content
 				.main
 					%h2 Project information
 					%span.actions
 						-if project.closed
-							= link_to image_tag("/images/icons/project-open.gif"), switch_project_path(project, :order => params[:order])
+							= link_to image_tag("/images/icons/project-open.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed])
 						-else
-							= link_to image_tag("/images/icons/project-close.gif"), switch_project_path(project, :order => params[:order])
+							= link_to image_tag("/images/icons/project-close.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed])
 					%hr.clear/
 					%dl
 						%dt.description Description:
@@ -58,7 +64,7 @@
 				%li= project.customer.name
 				%li.date= project.created_at.strftime("%Y-%m-%d")
 				%li.actions
-					= link_to image_tag("/images/icons/container-open.gif"), project_path(project, :order => params[:order])
-					= link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order])
-					= link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete
+					= link_to image_tag("/images/icons/container-open.gif"), project_path(project, :order => params[:order], :closed => params[:closed])
+					= link_to image_tag("/images/icons/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed])
+					= link_to image_tag("/images/icons/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete
 				.clear
