Create work-views / Setup Work Controller and models with new methods / Add Customer switch to project-form

--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -1,4 +1,4 @@
-.wizard
+#customerForm.wizard
   %a{:class => 'wizardFormSwitch'}New Customer [open/close]
   -if @customer.errors.any?
     #error_explanation
