--- a/app/views/layouts/projects.html.haml
+++ b/app/views/layouts/projects.html.haml
@@ -1,15 +1,22 @@
 !!!
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => "en", "xml:lang" => "en"}
-  %head
-    %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
-    %title Nancy
-    %link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
-    = javascript_include_tag :defaults
-    = stylesheet_link_tag :all
-    = csrf_meta_tag
-  %body
-    .container
-      - flash.each do |key, value|
-        %div{:class => key}= value
-      = render 'projects/form'
-      = render 'projects/list'
+%head
+	%meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
+	%title Nancy
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
+	= javascript_include_tag :defaults
+	= stylesheet_link_tag :all
+	= csrf_meta_tag
+%body#projects
+	#navigation
+		.container
+			%ul
+				%li= link_to 'Works', works_path()
+				%li= link_to 'Customers', customers_path()
+				%li.active= link_to 'Projects', projects_path()
+	.container#content
+		- flash.each do |key, value|
+			%div{:class => key}= value
+		= render 'projects/form'
+		= render 'projects/list'
+	.clear
