--- a/app/views/layouts/customers.html.haml
+++ b/app/views/layouts/customers.html.haml
@@ -4,6 +4,7 @@
 	%meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
 	%title Nancy
 	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/customers.less'}
 	= javascript_include_tag :defaults
 	= stylesheet_link_tag :all
 	= csrf_meta_tag
