--- a/app/views/layouts/works.html.haml
+++ b/app/views/layouts/works.html.haml
@@ -3,7 +3,8 @@
 %head
 	%meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
 	%title Nancy
-	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/work.less'}
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/works.less'}
 	= javascript_include_tag :defaults
 	= stylesheet_link_tag :all
 	= csrf_meta_tag
