--- a/public/stylesheets/_basic.less
+++ b/public/stylesheets/_basic.less
@@ -1,3 +1,8 @@
+@blueLight: #C8D9F4;
+@blueMedium: #94B4E6;
+@blueDark: #112363;
+@grey: #CCCCCC;
+
 .container {
 	margin-left: auto;
 	margin-right: auto;
