--- a/public/stylesheets/projects.less
+++ b/public/stylesheets/projects.less
@@ -2,6 +2,39 @@
 
 body#projects { 
 	form { display: none; }
+	div#projectForm {
+		div.wrapper {
+			.rounded;
+			background-color: @blueLight;
+		}
+	
+		div#createProject {
+			.grid(52,0,2);
+			dl dt { text-align: left; }
+			dl dt.title {	.grid(8);	}
+			dl dd.title {	.grid(42);	}
+			dl dd.title input { width: 420px; }
+
+			dl dt.description {	.grid(10,0,40);	}
+			dl dd.description {	.grid(50);	}
+			dl dd.description textarea {
+				height: 60px;
+				width: 500px;
+			}
+			dl dt.small, dl dd.small {	.grid(10);	}
+			dl dd.small input { width: 80px; }
+		}
+		div#selectCustomer {
+			.grid(40);
+			dl { margin-top: 15px; }
+			dl dt {	.grid(10,0,2); }
+			dl dd {
+				.grid(18); 
+				margin-bottom: 20px;}
+			dl dd select { width: 180px; }
+		}
+	}	
+	
 	div.toolbar li, ul.title li { .grid(32,0,0,1,1); }
 	div.toolbar li.nr, ul.title li.nr { .grid(6); }
 	div.toolbar li.date, ul.title li.date { .grid(12); }
