Add project-feature to switch the status closed

--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -39,7 +39,7 @@
 				.main
 					%h2 Project information
 					%span.actions
-						-if project.closed
+						-if project.closed == 0
 							= link_to image_tag("/images/icons/project-open.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed])
 						-else
 							= link_to image_tag("/images/icons/project-close.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed])
