--- a/app/views/layouts/customers.html.haml
+++ b/app/views/layouts/customers.html.haml
@@ -1,20 +1,23 @@
 !!!
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => "en", "xml:lang" => "en"}
-  %head
-    %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
-    %title Nancy
-    - if mobile_device?
-      %script{:src => "http://code.jquery.com/mobile/1.0a2/jquery.mobile-1.0a2.min.js"}
-      %link{:rel => "stylesheet", :href => "http://code.jquery.com/mobile/1.0a2/jquery.mobile-1.0a2.min.css"}
-    - else
-      = stylesheet_link_tag :all
-      %link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
-    = javascript_include_tag :defaults
-    = csrf_meta_tag
-  %body
-    .container
-      - flash.each do |key, value|
-        %div{:class => key}= value
-      = yield
-      = render 'customers/form'
-      = render 'customers/list'
+%head
+	%meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
+	%title Nancy
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/customers.less'}
+	= javascript_include_tag :defaults
+	= stylesheet_link_tag :all
+	= csrf_meta_tag
+%body#customers
+	#navigation
+		.container
+			%ul
+				%li= link_to 'Works', works_path()
+				%li= link_to 'Customers', customers_path()
+				%li.active= link_to 'Projects', projects_path()
+	.container#content
+		- flash.each do |key, value|
+			%div{:class => key}= value
+		= render 'customers/form'
+		= render 'customers/list'
+	.clear
