Add project-Layout with mobile index/show views

--- a/app/views/layouts/projects.mobile.haml
+++ b/app/views/layouts/projects.mobile.haml
@@ -16,6 +16,6 @@
           %li
             %a{"data-icon" => "refresh"} Work
           %li
-            %a.ui-btn-active{"data-icon" => "grid", :href => customers_path} Customers
+            %a{"data-icon" => "grid", :href => customers_path} Customers
           %li
-            %a{"data-icon" => "gear", :href => projects_path} Projects
+            %a.ui-btn-active{"data-icon" => "gear", :href => projects_path} Projects
