Set User-Layout within application controller / Style Login/Registration-Pages

--- a/public/stylesheets/nancy.less
+++ b/public/stylesheets/nancy.less
@@ -1,9 +1,12 @@
 @import "_basic";
-
+html { height: 100% ;}
 body {
 	background-color: white;
 	font-family: 'Cuprum', verdana, arial;
 	letter-spacing: 0.8px;
+	.gradient(#EFF6FF, #4A6A83);
+	min-height: 100%;
+	height: 100%;
 }
 
 div#navigation {
