--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,17 +1,19 @@
-%h2 Sign up
+.clear
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+  %h2 Sign up
   = devise_error_messages!
-  %p
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %p
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %p
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %p= f.submit "Sign up"
-= render :partial => "devise/shared/links"
+  %dl
+    %dt= f.label :firstname
+    %dd= f.email_field :firstname
+    %dt= f.label :lastname
+    %dd= f.email_field :lastname
+    %dt= f.label :email
+    %dd= f.email_field :email
+    %dt= f.label :password
+    %dd= f.password_field :password
+    %dt= f.label :password_confirmation, "Confirmation"
+    %dt= f.password_field :password_confirmation
+    %dt &nbsp;
+    %dt= f.submit "Sign up"
+  .clear
+  = render :partial => "users/shared/links"
