--- a/public/stylesheets/_basic.less
+++ b/public/stylesheets/_basic.less
@@ -75,9 +75,9 @@ ul { list-style-type: none; }
   border-bottom-right-radius: @radius;
 }
 .gradient (@from: #ffffff, @to: #000000) {
-	background: @from;
+	background: @to;
 	background: -webkit-gradient(linear, 0 0, 0 bottom, from(@from), to(@to));
-	background: -moz-linear-gradient(@from, @to);
+	background: -moz-linear-gradient(@from, @to 80%);
 	background: linear-gradient(@from, @to);
 	-pie-background: linear-gradient(@from, @to);
 }
