--- a/app/views/layouts/errors.html.haml
+++ b/app/views/layouts/errors.html.haml
@@ -4,20 +4,18 @@
 	%meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
 	%title Nancy
 	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
-	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/customers.less'}
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/works.less'}
 	= javascript_include_tag :defaults
 	= stylesheet_link_tag :all
 	= csrf_meta_tag
-%body#customers
+%body
 	#navigation
 		.container
 			%ul
 				%li= link_to 'Works', works_path()
-				%li.active= link_to 'Customers', customers_path()
+				%li= link_to 'Customers', customers_path()
 				%li= link_to 'Projects', projects_path()
 	.container#content
 		- flash.each do |key, value|
 			%div{:class => key}= value
-		= render 'customers/form'
-		= render 'customers/list'
 	.clear
