Fix cucumber features with authenticated user per action / Fix flash message bugs / move flash messages to new container in views

--- a/app/views/layouts/works.html.haml
+++ b/app/views/layouts/works.html.haml
@@ -15,8 +15,9 @@
 				%li.active= link_to 'Works', works_path()
 				%li= link_to 'Customers', customers_path()
 				%li= link_to 'Projects', projects_path()
-	.container#content
+	.container#flash
 		- flash.each do |key, value|
-			%div{:class => key}= value
+			%div{:class => key}= value	
+	.container#content
 		= yield
 	.clear
