--- a/app/views/layouts/projects.html.haml
+++ b/app/views/layouts/projects.html.haml
@@ -15,9 +15,10 @@
 				%li= link_to 'Works', works_path()
 				%li= link_to 'Customers', customers_path()
 				%li.active= link_to 'Projects', projects_path()
-	.container#content
+	.container#flash
 		- flash.each do |key, value|
 			%div{:class => key}= value
+	.container#content
 		= render 'projects/form'
 		= render 'projects/list'
 	.clear
