--- a/app/views/layouts/errors.html.haml
+++ b/app/views/layouts/errors.html.haml
@@ -15,7 +15,7 @@
 				%li= link_to 'Works', works_path()
 				%li= link_to 'Customers', customers_path()
 				%li= link_to 'Projects', projects_path()
-	.container#content
+	.container#flash
 		- flash.each do |key, value|
 			%div{:class => key}= value
 	.clear
